test_programs/compile_failure/comptime_as_typed_expr_private_type_trait_method/foo/src/lib.nr
pub trait Leak {
    fn raw_compute(x: Field) -> Field;
}

struct Hidden {}

impl Leak for Hidden {
    fn raw_compute(x: Field) -> Field {
        x * 1000
    }
}

pub struct PublicWrapper {
    inner: Hidden,
}
